--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,17 @@ jobs:
           echo 'Date MacOS'
           date
           
-    print_date_final: 
-      name: Print Date Final
+    print_date_final:
+      name: Print Date Final!
       runs-on: ubuntu-latest
       
       needs: 
         - print_date_ubuntu
         - print_date_windows
         - print_date_macos
+      steps: 
+      - name : Print Date Final!
+        run: | 
+        echo ' Date Final'
+        date
+        
