--- a/.github/workflows/exercicio2.yml
+++ b/.github/workflows/exercicio2.yml
@@ -14,3 +14,10 @@ jobs:
     
       - name: Checkout repository
         uses: actions/checkout@v3.3.0
+      
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: repo do dougao
+          path: .
+          retention-days: 15
