--- a/.github/workflows/exercicio2.yml
+++ b/.github/workflows/exercicio2.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: repo do dougao
+          name: ${{vars.NOME_ARQUIVO_UPLOAD}}
           path: .
           retention-days: 15
